src/assets/css/alexandria.css
/* CSS for React-Router to animate transitions */
.fade-enter {
  opacity: 0;
  z-index: 1;
}

.fade-enter.fade-enter-active {
  opacity: 1;
  transition: opacity 250ms ease-in;
}

.descriptionShort {
	overflow: hidden;
	text-overflow: ellipsis;
	display: -webkit-box;
	-webkit-line-clamp: 3;
	-webkit-box-orient: vertical;
}

/* CSS to run the Alexandria Stack */
.alexandria-nav {
	list-style: none;
	width: 100%; 
	padding-right: 20px; 
	padding-left: 25px;	
	margin: 0px auto; 
	text-align: center; 
	display: block;
}

.artifact-list-card {
	max-height: 250px; 
	width: auto; 
	object-fit: cover;
}

.wallet-top-card {
	max-height: 250px; 
	object-fit: contain;
}

.tint-a-bit {
	background-color:rgba(0,0,0,0.7);
}

.btn-bits-bg:hover, .btn-bits-bg:active {
	color: rgba(92,184,92,1);
	background-color: rgba(92,184,92,0.2);
}

.btn-info-light-bg:hover, .btn-danger-light-bg:active {
	color: #e4f7fd;
	background-color: rgba(91,192,222,0.4);
}

.btn-warning-light-bg:hover, .btn-danger-light-bg:active {
	color: #f9e9d3;
	background-color: rgba(240,173,78,0.4);
}

.btn-danger-light-bg:hover, .btn-danger-light-bg:active {
	color: #fddbda;
	background-color: rgba(217,83,79,0.4);
}

.content-card-img {
	height: 145px; 
	width: auto; 
	object-fit: cover;
	background-color: #fff;
  overflow: hidden;
}

.content-card-xinfo {
	text-align: right; 
	margin-top: -25px;
	color:#fff;
	padding-right:5px;
	margin-bottom:-5px;
	background-color:rgba(0,0,0,0.3);
}

.content-card-xinfo-offset {
	margin-bottom:-7px;
}

.content-container {
	background-color: #000; 
}

.content-container .content {
	margin-left: auto; 
	margin-right: auto; 
	display: block; 
	z-index: -1; 
	position: static;
	overflow: scroll;
}

.paywall-container {
	margin: 0px auto; 
	padding: 10px; 
	z-index: 100;
	position: relative;
	color: #fff;
	background-color:rgba(0,0,0,0.8);
}
.img-container{
	width: auto;
	max-width: 100%;
	display: block;
	margin: auto;
}
@media (min-width: 1300px) { 
	.img-container{
		height: 100%;
	}
	.content-container {
		height: 720px;
		width: 100%;
	}
  .content-container .content {
    width: 100%; 
    height: 720px; 
  }
  	.paywall-container {
		width: 100%; 
		height: 720px; 
		margin-top: -720px; 
	}
}
@media (max-width: 1300px) and (min-width: 900px) { 
	.img-container{
		max-height: 100%;
	}
	.content-container {
		height: auto;
		min-height: 500px;
		width: 100%;
	}
	.content-container .content {
    	height: auto;
    	min-height: 500px;
    	width: 100%;
	}
	.paywall-container {
		height: auto;
		min-height: 500px;
		margin-top: -500px; 
		width: 100%;
	}
}
@media (max-width: 900px) and (min-width: 550px) { 
	.content-container {
		height: auto;
		min-height: 300px;
		width: 100%;
	}
	.content-container .content {
    	height: auto;
    	min-height: 300px;
    	width: 100%;
	}
	.paywall-container {
		height: auto;
		min-height: 300px;
		margin-top: -300px; 
		width: 100%;
	}
}
@media (max-width: 550px) and (min-width: 200px) { 
	.content-container {
		height: auto;
		min-height: 200px;
		width: 100%;
	}
	.content-container .content {
    	height: auto;
    	min-height: 200px;
    	width: 100%;
	}
	.paywall-container {
		height: auto;
		min-height: 200px;
		margin-top: -200px; 
		width: 100%;
	}
}

.table td, .table th {
	border-top: none;
}

.view-btn {
	float:right;
	margin-right:-10px;
	margin-bottom:-10px;
	margin-top:-16px;
}

.vjs-poster {
	background-size: 100%;
}

.blur {
	-webkit-filter: blur(15px);
	-moz-filter: blur(15px);
	-o-filter: blur(15px);
	-ms-filter: blur(15px);
	filter: blur(15px);
}

.btn-outline-secondary {
	border-color: #333 !important;
	color: #333 !important;;
}

.btn-outline-white {
	border-color: #fff;
	color: #fff;
	background-color: rgba(255,255,255,0);
}

.outline-white {
	border-color: #fff;
}

.btn-outline-white:hover, .btn-outline-white:active{
	background-color: rgba(255,255,255,0.2);
}

.btn-secondary.active {
	background-color: rgba(255,255,255,0.4);
}

.btn-white {
	color: #fff;
}

.no-link-styling {
	text-decoration: none;
	color: #292b2c;
	cursor: pointer; 
	cursor: hand;
	margin-bottom: 10px;
}

.no-link-styling:hover {
	color: #000;
}

.dropdown-item .narrow {
	padding-left: 5px;
	padding-right: 5px;
}

.fixed-bottom {
	position: fixed;
	bottom: 0;
	right: 0;
	left: 0;
	z-index: 1030;
	margin-top: -50px;
}

.app-block-footer {
	background-color: rgb(27, 28, 29);
	color: #444;
	color: rgba(116, 119, 123, .5);
}

.mp-icon {
	font-size: 2em;
	padding-left: 5px;
	padding-right: 5px;
}

.mini-audio-player {
	background-color: #ffffff;
	padding-top:3px;
	border-top: 1px #000;
}

.markdownContainer {
	background-color: #fff;
    padding: 50px;
    overflow: scroll;
}

.markdownContainer > div > p > img {
	max-width: 100%;
}

@media (min-width: 768px) {
    .navbar .navbar-nav {
        display: inline-block;
        float: none;
		vertical-align: top;
    }
    
    .navbar .navbar-collapse {
        text-align: center;
    }

    .navbar-center {
	    float: left;
	    margin-left: 50%;
    }
}

h1 {
	border-bottom: none;
}

.dual-selector {
	display: flex; 
	padding: 0px 0px !important;
	width: 100%; 
	padding-top: 1px !important;
}

.custom-file-control::before {
    color: #5bc0de;
    background-color: #fff;
    border: 1px solid rgba(91, 192, 222, 1);
    border-radius: 0 .25rem .25rem 0;
}

.custom-file-control::before:hover{
    color: #fff;
    background-color: #5bc0de;
    border: 1px solid rgba(91, 192, 222, 1);
    border-radius: 0 .25rem .25rem 0;
}

.table-icon {
	width: 20px;
	height: 20px;
	color: #ccc;
	fill: currentColor;
}

.type-circle {
	margin: 0 auto;
    border-radius: 50%;
    border: 1px solid #979797;
    background-color: #ffffff;
    height: 60px;
    width: 60px;
    background-size: 40px 40px;
    background-repeat: no-repeat;
    background-position: center;
    color: #979797;
	fill: currentColor;
}

.type-circle:hover {
	background-color: #ddd;
	border: 1px solid #999999;
}
/* ... */

